--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -1,4 +1,4 @@
-SOURCES_C=prym_green.c
+SOURCES_C=binomial_coeffs.c prym_green.c
 SOURCES_CXX=submatrix.cc
 HEADERS=prym_green_types.h
 HEADERS+=$(SOURCES_C:.c=.h) $(SOURCES_CXX:.cc=.h)
@@ -12,6 +12,10 @@ LINKING_OPTIONS=-Wl,-rpath,$(FLINT_DIR)/lib,-rpath,$(SINGULAR_DIR)/lib
 LINKING_OPTIONS+=-L$(FLINT_DIR)/lib -L$(SINGULAR_DIR)/lib -lflint
 
 all: $(LIBNAME)
+
+binomial_coeffs.o: binomial_coeffs.c
+	@echo "  CC      $@"
+	$(Q)$(CC) -c $(CFLAGS) -o$@ $<
 
 prym_green.o: prym_green.c
 	@echo "  CC      $@"
