--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -1,8 +1,10 @@
-SOURCES_C=berlekamp_massey.c binomial_coeffs.c prym_green.c
+SOURCES_C=berlekamp_massey.c binomial_coeffs.c gauss.c prym_green.c
 SOURCES_CXX=submatrix.cc
 HEADERS=prym_green_types.h
 HEADERS+=$(SOURCES_C:.c=.h) $(SOURCES_CXX:.cc=.h)
-OBJECTS=$(SOURCES_C:.c=.o) $(SOURCES_CXX:.cc=.o)
+OBJECTS_C=$(SOURCES_C:.c=.o)
+OBJECTS_CXX=$(SOURCES_CXX:.cc=.o)
+OBJECTS=$(OBJECTS_C) $(OBJECTS_CXX)
 LIBNAME=libprymgreen.so
 
 INCLUDE_FLINT=-I$(FLINT_DIR)/include
@@ -13,19 +15,11 @@ LINKING_OPTIONS+=-L$(FLINT_DIR)/lib -L$(SINGULAR_DIR)/lib -lflint
 
 all: $(LIBNAME)
 
-berlekamp_massey.o: berlekamp_massey.c
-	@echo "  CC      $@"
-	$(Q)$(CC) -c $(CFLAGS) -o$@ $<
-
-binomial_coeffs.o: binomial_coeffs.c
-	@echo "  CC      $@"
-	$(Q)$(CC) -c $(CFLAGS) -o$@ $<
-
-prym_green.o: prym_green.c
+$(OBJECTS_C): %.o: %.c
 	@echo "  CC      $@"
 	$(Q)$(CC) -c $(CFLAGS) $(INCLUDE_FLINT) -o$@ $<
 
-submatrix.o: submatrix.cc
+$(OBJECTS_CXX): %.o: %.cc
 	@echo "  CXX     $@"
 	$(Q)$(CXX) -c $(CXXFLAGS) $(INCLUDE_SINGULAR) -o$@ $<
 
