add -lfactory -lomalloc -lpolys -lsingular_resources

--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -21,6 +21,7 @@ LINK_CXXWRAP=-L$(CXXWRAP_DIR)/lib -Wl,-rpath,$(CXXWRAP_DIR)/lib -lcxxwrap_julia
 LINK_FLINT=-L$(FLINT_DIR)/lib -Wl,-rpath,$(FLINT_DIR)/lib -lflint
 LINK_JULIA=-L$(JULIA_DIR)/lib -Wl,-rpath,$(JULIA_DIR)/lib -ljulia
 LINK_SINGULAR=-L$(SINGULAR_DIR)/lib -Wl,-rpath,$(SINGULAR_DIR)/lib -lSingular
+LINK_SINGULAR+=-lfactory -lomalloc -lpolys -lsingular_resources
 
 LINKING_OPTIONS=$(LINK_CXXWRAP) $(LINK_FLINT) $(LINK_JULIA) $(LINK_SINGULAR)
 
