include flint when compiling c++ files

--- a/src/lib/Makefile.in
+++ b/src/lib/Makefile.in
@@ -15,7 +15,8 @@ INCLUDE_JULIA=-I$(JULIA_DIR)/include/julia
 INCLUDE_SINGULAR=-I$(SINGULAR_DIR)/include -I$(SINGULAR_DIR)/include/singular
 
 C_INCLUDE=$(INCLUDE_FLINT)
-CXX_INCLUDE=$(INCLUDE_JULIA) $(INCLUDE_CXXWRAP) $(INCLUDE_SINGULAR)
+CXX_INCLUDE=$(INCLUDE_CXXWRAP) $(INCLUDE_FLINT) $(INCLUDE_JULIA)
+CXX_INCLUDE+=$(INCLUDE_SINGULAR)
 
 LINK_CXXWRAP=-L$(CXXWRAP_DIR)/lib -Wl,-rpath,$(CXXWRAP_DIR)/lib -lcxxwrap_julia
 LINK_FLINT=-L$(FLINT_DIR)/lib -Wl,-rpath,$(FLINT_DIR)/lib -lflint
