--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ script:
 after_success:
     - julia --color=yes -e '
           using Pkg;
-          cd(Pkg.dir("PrymGreen"));
+          import PrymGreen;
+          cd(realpath(joinpath(dirname(pathof(PrymGreen)), "..")));
           Pkg.add("Coverage");
           using Coverage;
           Coveralls.submit(Coveralls.process_folder());
