--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ script:
     - while sleep 60; do echo "still alive"; done &
     - julia --color=yes -e '
           using Pkg;
+          @info "temporary workaround for\n"
+          * "https://github.com/oscar-system/Singular.jl/issues/102";
           Pkg.add(PackageSpec(name = "CxxWrap", version = "0.8.1"));
           abstractalgebra_url
                   = "https://github.com/Nemocas/AbstractAlgebra.jl";
